added and styled an example app

--- a/index.html
+++ b/index.html
@@ -17,7 +17,25 @@
       <p>👋 Hello, I am</p>
       <h1>Christie Chinaka</h1>
       <h3 class="mb-3">Front-end developer based in the United States</h3>
-      <a href="#" class="btn btn-contact">Contact me</a>
+      <a href="#" class="btn btn-contact-launch">Contact me</a>
     </div>
+    
+    <p class="header-apps text-center m-5">See some of my recent projects below:</p>
+
+    <div class="container">
+
+      <div class="row">
+        <div class="col-6">
+
+        </div>
+        
+        <div class="col-6">
+          <h2 class="mb-5">Dictionary App</h2>
+          <p class="mb-4 text-muted">Look up word definitions with picture examples using my dictionary app developed using the SheCodes API.</p>
+          <a href="" class="btn btn-contact-launch">Launch Dictionary App</a>
+        </div>
+      </div>
+    </div>
+
 </body>
 </html>
