--- a/index.html
+++ b/index.html
@@ -20,42 +20,50 @@
       <a href="#" class="btn btn-contact-launch">Contact me</a>
     </div>
     
-    <p class="header-apps text-center m-5">See some of my recent projects below:</p>
+    <p class="project-header text-center m-5">See some of my recent projects below:</p>
     
-    <div class="row row-cols-1 row-cols-md-3 g-4 app-grid">
-      <div class="col">
-        <div class="card h-100">
-          <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/172/894/original/Dictionary_App.png?1756326649" class="card-img-top" />
-          <div class="card-body text-center">
-            <h5 class="card-title">Dictionary App</h5>
-            <p class="card-text text-muted">Look up word definitions with picture examples using my dictionary app developed using the SheCodes Dictionary API.</p>
-            <a href="https://animated-custard-47288e.netlify.app/" class="btn btn-contact-launch">Launch Dictionary App</a>
+    <container-fluid>
+      <div class="row row-cols-1 row-cols-md-3 g-4 app-grid">
+        <div class="col d-flex justify-content-center">
+          <div class="card h-100 w-75">
+            <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/172/894/original/Dictionary_App.png?1756326649" class="card-img-top" />
+            <div class="card-body text-center card-background">
+              <h5 class="card-title">Dictionary App</h5>
+              <p class="card-text text-muted">Look up word definitions with picture examples using my dictionary app developed using the SheCodes Dictionary API.</p> 
+            </div>
+            <div class="card-footer d-flex justify-content-center">
+              <a href="https://animated-custard-47288e.netlify.app/" class="btn btn-contact-launch">Launch Dictionary App</a>
+            </div>
           </div>
         </div>
-      </div>
 
-      <div class="col">
-        <div class="card h-100">
-          <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/172/895/original/Weather_App_React.png?1756326655" class="card-img-top" />
-          <div class="card-body text-center">
-            <h5 class="card-title">Weather App</h5>
-            <p class="card-text text-muted">Look up the weather around the world using my weather app developed using the SheCodes Weather API.</p>
-            <a href="https://golden-liger-09cb10.netlify.app/" class="btn btn-contact-launch">Launch Weather App</a>
+        <div class="col d-flex justify-content-center">
+          <div class="card h-100 w-75">
+            <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/172/895/original/Weather_App_React.png?1756326655" class="card-img-top" />
+            <div class="card-body text-center card-background">
+              <h5 class="card-title">Weather App</h5>
+              <p class="card-text text-muted">Look up the weather around the world using my weather app developed using the SheCodes Weather API.</p>
+            </div>
+            <div class="card-footer d-flex justify-content-center">
+              <a href="https://golden-liger-09cb10.netlify.app/" class="btn btn-contact-launch">Launch Weather App</a>
+            </div>
           </div>
         </div>
-      </div>
 
-      <div class="col">
-        <div class="card h-100">
-          <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/172/893/original/Baking.png?1756326641" class="card-img-top" />
-          <div class="card-body text-center">
-            <h5 class="card-title">Baking Website</h5>
-            <p class="card-text text-muted">View baking projects and contact information on the baking website.</p>
-            <a href="https://astonishing-sable-13b731.netlify.app/" class="btn btn-contact-launch">Launch Baking App</a>
+        <div class="col d-flex justify-content-center">
+          <div class="card h-100 w-75">
+            <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/172/893/original/Baking.png?1756326641" class="card-img-top" />
+            <div class="card-body text-center card-background">
+              <h5 class="card-title">Baking Website</h5>
+              <p class="card-text text-muted">View baking projects and contact information on the baking website.</p>
+            </div>
+            <div class="card-footer d-flex justify-content-center">
+              <a href="https://astonishing-sable-13b731.netlify.app/" class="btn btn-contact-launch">Launch Baking Website</a>
+            </div>
           </div>
         </div>
       </div>
-    </div>
+    </container-fluid>
 
 </body>
 </html>
