--- a/about.html
+++ b/about.html
@@ -13,9 +13,19 @@
   <title>Christie Chinaka-Portfolio</title>
 </head>
 <body>
-  <h1>Hi, I am Christie Chinaka</h1>
-  <h2>Front-end Developer, based in the United States</h2>
+  <div class="about-section container">
+    <div class="row">
+      <div class="col-md-6">
+        <h1>Christie Chinaka</h1>
+        <h2 class="mt-md-4">Front-end Developer, based in the United States</h2>
 
-  <p>I am seeking new opportunities in front-end development, with skills in React, JavaScript, and integrating APIs.</p>
+        <p class="mt-md-4">I am seeking new opportunities in front-end development, with skills in React, JavaScript, and integrating APIs.</p>
+        <a href="#" class="btn btn-contact-launch mt-md-4">See my projects</a>
+      </div>
+      <div class="col-md-6">
+        <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/172/979/original/IMG_6389.jpg?1756492559" alt="profile picture" class="profile-picture img-fluid" />
+      </div>      
+    </div>
+  </div>
 </body>
 </html>
