updated classes; added work file content

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <p>👋 Hello, I am</p>
       <h1>Christie Chinaka</h1>
       <h3 class="mb-3">Front-end developer based in the United States</h3>
-      <a href="#" class="btn btn-contact-launch">Contact me</a>
+      <a href="#" class="btn btn-main">Contact me</a>
     </div>
     
     <p class="project-header text-center m-5">See some of my recent projects below:</p>
@@ -32,7 +32,7 @@
               <p class="card-text text-muted">Look up word definitions with picture examples using my dictionary app developed using the SheCodes Dictionary API.</p> 
             </div>
             <div class="card-footer d-flex justify-content-center">
-              <a href="https://animated-custard-47288e.netlify.app/" class="btn btn-contact-launch">Launch Dictionary App</a>
+              <a href="https://animated-custard-47288e.netlify.app/" class="btn btn-main">Launch Dictionary App</a>
             </div>
           </div>
         </div>
@@ -45,7 +45,7 @@
               <p class="card-text text-muted">Look up the weather around the world using my weather app developed using the SheCodes Weather API.</p>
             </div>
             <div class="card-footer d-flex justify-content-center">
-              <a href="https://golden-liger-09cb10.netlify.app/" class="btn btn-contact-launch">Launch Weather App</a>
+              <a href="https://golden-liger-09cb10.netlify.app/" class="btn btn-main">Launch Weather App</a>
             </div>
           </div>
         </div>
@@ -58,7 +58,7 @@
               <p class="card-text text-muted">View baking projects and contact information on the baking website.</p>
             </div>
             <div class="card-footer d-flex justify-content-center">
-              <a href="https://astonishing-sable-13b731.netlify.app/" class="btn btn-contact-launch">Launch Baking Website</a>
+              <a href="https://astonishing-sable-13b731.netlify.app/" class="btn btn-main">Launch Baking Website</a>
             </div>
           </div>
         </div>
