--- a/work.html
+++ b/work.html
@@ -14,18 +14,23 @@
 </head>
 <body>
   <div class="content-section container">
-    <div class="row">
-      <div class="col-md-6">
-        <h1>Christie Chinaka</h1>
-        <h2 class="mt-md-4">Front-end Developer, based in the United States</h2>
-
-        <p class="mt-md-4">I am seeking new opportunities in front-end development, with skills in React, JavaScript, and integrating APIs.</p>
-        <a href="#" class="btn btn-main mt-md-4">See my projects</a>
-      </div>
-      <div class="col-md-6">
-        <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/172/979/original/IMG_6389.jpg?1756492559" alt="profile picture" class="profile-picture img-fluid" />
-      </div>      
+    <div class="content">
+      <h1>See some of my latest projects!</h1>
     </div>
+    <div class="row">
+      <div class="col-md-6 text-center">
+        <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/172/895/original/Weather_App_React.png?1756326655" class="img-fluid" />
+        <h4 class="mt-4">Weather App</h4>
+        <p class="text-muted">Coded with HTML, React, and SheCodes API.</p>
+      </div>
+
+      <div class="col-md-6 text-center">
+        <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/172/894/original/Dictionary_App.png?1756326649" class="img-fluid" />
+        <h4 class="mt-4">Dictionary App</h4>
+        <p class="text-muted">Coded with HTML, React, and SheCodes API.</p>
+      </div>
+    </div>
+
   </div>
 </body>
 </html>
