--- a/work.html
+++ b/work.html
@@ -14,19 +14,25 @@
 </head>
 <body>
   <div class="content-section container">
-    <div class="content">
-      <h1>See some of my latest projects!</h1>
+    <div>
+      <h1 class="mb-5 text-center">See some of my latest projects:</h1>
     </div>
     <div class="row">
-      <div class="col-md-6 text-center">
-        <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/172/895/original/Weather_App_React.png?1756326655" class="img-fluid" />
+      <div class="col-md-4 text-center">
+        <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/172/895/original/Weather_App_React.png?1756326655" class="latest-projects img-fluid" />
         <h4 class="mt-4">Weather App</h4>
         <p class="text-muted">Coded with HTML, React, and SheCodes API.</p>
       </div>
 
-      <div class="col-md-6 text-center">
-        <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/172/894/original/Dictionary_App.png?1756326649" class="img-fluid" />
+      <div class="col-md-4 text-center">
+        <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/172/894/original/Dictionary_App.png?1756326649" class="latest-projects img-fluid" />
         <h4 class="mt-4">Dictionary App</h4>
+        <p class="text-muted">Coded with HTML, React, and SheCodes API.</p>
+      </div>
+
+      <div class="col-md-4 text-center">
+        <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/172/893/original/Baking.png?1756326641" class="latest-projects img-fluid" />
+        <h4 class="mt-4">Baking Website</h4>
         <p class="text-muted">Coded with HTML, React, and SheCodes API.</p>
       </div>
     </div>
