--- a/index.html
+++ b/index.html
@@ -13,6 +13,17 @@
   <title>Christie Chinaka-Portfolio</title>
 </head>
 <body>
+  <nav>
+    <h2>Christie Chinaka</h2>
+    <ul>
+      <li>Home</li>
+      <li>About</li>
+      <li>Work</li>
+      <li>Contact</li>
+    </ul>
+  </nav>
+
+
     <div class="hero">
       <p>👋 Hello, I am</p>
       <h1>Christie Chinaka</h1>
