styled navigation links

--- a/index.html
+++ b/index.html
@@ -13,68 +13,69 @@
   <title>Christie Chinaka-Portfolio</title>
 </head>
 <body>
-  <nav>
-    <h2>Christie Chinaka</h2>
-    <ul>
-      <li>Home</li>
-      <li>About</li>
-      <li>Work</li>
-      <li>Contact</li>
-    </ul>
-  </nav>
+  <div class="container">
+    <nav class="d-flex justify-content-between">
+      <h2>Christie Chinaka</h2>
+      <ul class="header-list">
+        <li class="active"><a href="/">Home</a></li>
+        <li><a href="/about.html">About</a></li>
+        <li><a href="/work.html">Work</a></li>
+        <li><a href="/contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </div>
 
-
-    <div class="hero">
-      <p>👋 Hello, I am</p>
-      <h1>Christie Chinaka</h1>
-      <h3 class="mb-3">Front-end developer based in the United States</h3>
-      <a href="#" class="btn btn-main">Contact me</a>
-    </div>
-    
-    <p class="project-header text-center m-5">See some of my recent projects below:</p>
-    
-    <container-fluid>
-      <div class="row row-cols-1 row-cols-md-3 g-4 app-grid">
-        <div class="col d-flex justify-content-center">
-          <div class="card h-100 w-75">
-            <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/172/894/original/Dictionary_App.png?1756326649" class="card-img-top" />
-            <div class="card-body text-center card-background">
-              <h5 class="card-title">Dictionary App</h5>
-              <p class="card-text text-muted">Look up word definitions with picture examples using my dictionary app developed using the SheCodes Dictionary API.</p> 
-            </div>
-            <div class="card-footer d-flex justify-content-center">
-              <a href="https://animated-custard-47288e.netlify.app/" class="btn btn-main">Launch Dictionary App</a>
-            </div>
+  <div class="hero">
+    <p>👋 Hello, I am</p>
+    <h1>Christie Chinaka</h1>
+    <h3 class="mb-3">Front-end developer based in the United States</h3>
+    <a href="#" class="btn btn-main">Contact me</a>
+  </div>
+  
+  <p class="project-header text-center m-5">See some of my recent projects below:</p>
+  
+  <container-fluid>
+    <div class="row row-cols-1 row-cols-md-3 g-4 app-grid">
+      <div class="col d-flex justify-content-center">
+        <div class="card h-100 w-75">
+          <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/172/894/original/Dictionary_App.png?1756326649" class="card-img-top" />
+          <div class="card-body text-center card-background">
+            <h5 class="card-title">Dictionary App</h5>
+            <p class="card-text text-muted">Look up word definitions with picture examples using my dictionary app developed using the SheCodes Dictionary API.</p> 
           </div>
-        </div>
-
-        <div class="col d-flex justify-content-center">
-          <div class="card h-100 w-75">
-            <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/172/895/original/Weather_App_React.png?1756326655" class="card-img-top" />
-            <div class="card-body text-center card-background">
-              <h5 class="card-title">Weather App</h5>
-              <p class="card-text text-muted">Look up the weather around the world using my weather app developed using the SheCodes Weather API.</p>
-            </div>
-            <div class="card-footer d-flex justify-content-center">
-              <a href="https://golden-liger-09cb10.netlify.app/" class="btn btn-main">Launch Weather App</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col d-flex justify-content-center">
-          <div class="card h-100 w-75">
-            <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/172/893/original/Baking.png?1756326641" class="card-img-top" />
-            <div class="card-body text-center card-background">
-              <h5 class="card-title">Baking Website</h5>
-              <p class="card-text text-muted">View baking projects and contact information on the baking website.</p>
-            </div>
-            <div class="card-footer d-flex justify-content-center">
-              <a href="https://astonishing-sable-13b731.netlify.app/" class="btn btn-main">Launch Baking Website</a>
-            </div>
+          <div class="card-footer d-flex justify-content-center">
+            <a href="https://animated-custard-47288e.netlify.app/" class="btn btn-main">Launch Dictionary App</a>
           </div>
         </div>
       </div>
-    </container-fluid>
+
+      <div class="col d-flex justify-content-center">
+        <div class="card h-100 w-75">
+          <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/172/895/original/Weather_App_React.png?1756326655" class="card-img-top" />
+          <div class="card-body text-center card-background">
+            <h5 class="card-title">Weather App</h5>
+            <p class="card-text text-muted">Look up the weather around the world using my weather app developed using the SheCodes Weather API.</p>
+          </div>
+          <div class="card-footer d-flex justify-content-center">
+            <a href="https://golden-liger-09cb10.netlify.app/" class="btn btn-main">Launch Weather App</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col d-flex justify-content-center">
+        <div class="card h-100 w-75">
+          <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/172/893/original/Baking.png?1756326641" class="card-img-top" />
+          <div class="card-body text-center card-background">
+            <h5 class="card-title">Baking Website</h5>
+            <p class="card-text text-muted">View baking projects and contact information on the baking website.</p>
+          </div>
+          <div class="card-footer d-flex justify-content-center">
+            <a href="https://astonishing-sable-13b731.netlify.app/" class="btn btn-main">Launch Baking Website</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </container-fluid>
 
 </body>
 </html>
