--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <title>Christie Chinaka-Portfolio</title>
 </head>
 <body>
-  <div class="container">
+  <div class="container-fluid">
     <nav class="d-flex justify-content-between">
       <h2>Christie Chinaka</h2>
       <ul class="header-list">
@@ -35,7 +35,7 @@
   <p class="project-header text-center m-5">See some of my recent projects below:</p>
   
   <container-fluid>
-    <div class="row row-cols-1 row-cols-md-3 g-4 app-grid">
+    <div class="row row-cols-md-3 g-4 app-grid">
       <div class="col d-flex justify-content-center">
         <div class="card h-100 w-75">
           <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/172/894/original/Dictionary_App.png?1756326649" class="card-img-top" />
