--- a/index.html
+++ b/index.html
@@ -29,15 +29,17 @@
     <p>👋 Hello, I am</p>
     <h1>Christie Chinaka</h1>
     <h3 class="mb-3">Front-end developer based in the United States</h3>
-    <a href="#" class="btn btn-main">Contact me</a>
+    <div>
+      <a href="#" class="btn btn-main">Contact me</a>
+    </div>
   </div>
   
   <p class="project-header text-center m-5">See some of my recent projects below:</p>
   
-  <container-fluid>
+  <div class="container-fluid">
     <div class="row row-cols-md-3 g-4 app-grid">
       <div class="col d-flex justify-content-center">
-        <div class="card h-100 w-75">
+        <div class="card" style="width: 35rem;">
           <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/172/894/original/Dictionary_App.png?1756326649" class="card-img-top" />
           <div class="card-body text-center card-background">
             <h5 class="card-title">Dictionary App</h5>
@@ -50,7 +52,7 @@
       </div>
 
       <div class="col d-flex justify-content-center">
-        <div class="card h-100 w-75">
+        <div class="card" style="width: 35rem;">
           <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/172/895/original/Weather_App_React.png?1756326655" class="card-img-top" />
           <div class="card-body text-center card-background">
             <h5 class="card-title">Weather App</h5>
@@ -63,7 +65,7 @@
       </div>
 
       <div class="col d-flex justify-content-center">
-        <div class="card h-100 w-75">
+        <div class="card" style="width: 35rem">
           <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/172/893/original/Baking.png?1756326641" class="card-img-top" />
           <div class="card-body text-center card-background">
             <h5 class="card-title">Baking Website</h5>
@@ -75,7 +77,7 @@
         </div>
       </div>
     </div>
-  </container-fluid>
+  </div>
 
 </body>
 </html>
