added recent project cards and updated css

--- a/index.html
+++ b/index.html
@@ -34,10 +34,23 @@
     </div>
   </div>
   
-  <p class="project-header text-center m-5">See some of my recent projects below:</p>
+  <p class="project-header text-center">See some of my recent projects below:</p>
   
   <div class="container-fluid">
     <div class="row row-cols-md-3 g-4 app-grid">
+      <div class="col d-flex justify-content-center">
+        <div class="card" style="width: 35rem;">
+          <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/172/895/original/Weather_App_React.png?1756326655" class="card-img-top" />
+          <div class="card-body text-center card-background">
+            <h5 class="card-title">Weather App</h5>
+            <p class="card-text text-muted">Look up the weather around the world using my weather app developed using the SheCodes Weather API.</p>
+          </div>
+          <div class="card-footer d-flex justify-content-center">
+            <a href="https://golden-liger-09cb10.netlify.app/" class="btn btn-main">Launch Weather App</a>
+          </div>
+        </div>
+      </div>
+      
       <div class="col d-flex justify-content-center">
         <div class="card" style="width: 35rem;">
           <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/172/894/original/Dictionary_App.png?1756326649" class="card-img-top" />
@@ -52,19 +65,6 @@
       </div>
 
       <div class="col d-flex justify-content-center">
-        <div class="card" style="width: 35rem;">
-          <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/172/895/original/Weather_App_React.png?1756326655" class="card-img-top" />
-          <div class="card-body text-center card-background">
-            <h5 class="card-title">Weather App</h5>
-            <p class="card-text text-muted">Look up the weather around the world using my weather app developed using the SheCodes Weather API.</p>
-          </div>
-          <div class="card-footer d-flex justify-content-center">
-            <a href="https://golden-liger-09cb10.netlify.app/" class="btn btn-main">Launch Weather App</a>
-          </div>
-        </div>
-      </div>
-
-      <div class="col d-flex justify-content-center">
         <div class="card" style="width: 35rem">
           <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/172/893/original/Baking.png?1756326641" class="card-img-top" />
           <div class="card-body text-center card-background">
@@ -73,6 +73,58 @@
           </div>
           <div class="card-footer d-flex justify-content-center">
             <a href="https://astonishing-sable-13b731.netlify.app/" class="btn btn-main">Launch Baking Website</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col d-flex justify-content-center additional-row-app">
+        <div class="card" style="width: 35rem">
+          <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/172/896/original/Japan_Travel.png?1756326664" class="card-img-top" />
+          <div class="card-body text-center card-background">
+            <h5 class="card-title">Travel Japan Website</h5>
+            <p class="card-text text-muted">View top travel sites, Instagram posts, and transportation options throughout major cities in Japan.</p>
+          </div>
+          <div class="card-footer d-flex justify-content-center">
+            <a href="https://peppy-biscotti-5e1d5c.netlify.app/" class="btn btn-main">Launch Japan Website</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col d-flex justify-content-center additional-row-app">
+        <div class="card" style="width: 35rem">
+          <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/172/898/original/World_Clock.png?1756326683" class="card-img-top" />
+          <div class="card-body text-center card-background">
+            <h5 class="card-title">World Clock Website</h5>
+            <p class="card-text text-muted">Select a city to view the current time, as well as see the time in your location.</p>
+          </div>
+          <div class="card-footer d-flex justify-content-center">
+            <a href="https://frabjous-monstera-cce538.netlify.app/" class="btn btn-main">Launch World Clock</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col d-flex justify-content-center additional-row-app">
+        <div class="card" style="width: 35rem">
+          <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/172/892/original/AI_Poem_Generator.png?1756326632" class="card-img-top" />
+          <div class="card-body text-center card-background">
+            <h5 class="card-title">AI Poem App</h5>
+            <p class="card-text text-muted">Type a topic into the text box and use the SheCodes AI to create a poem.</p>
+          </div>
+          <div class="card-footer d-flex justify-content-center">
+            <a href="https://tubular-unicorn-1d195e.netlify.app/" class="btn btn-main">Launch Poem App</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col d-flex justify-content-center mx-auto additional-row-app" style:="width: 200px;">
+        <div class="card" style="width: 35rem">
+          <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/172/897/original/Weather_App_Vanilla.png?1756326675" class="card-img-top" />
+          <div class="card-body text-center card-background">
+            <h5 class="card-title">Weather App</h5>
+            <p class="card-text text-muted">View the weather around the world using the SheCodes API.</p>
+          </div>
+          <div class="card-footer d-flex justify-content-center">
+            <a href="https://venerable-faun-ecd2fa.netlify.app/" class="btn btn-main">Launch Weather App</a>
           </div>
         </div>
       </div>
