--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
   <link rel="stylesheet" href="styles/portfolio.css" />
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/72594b2d43.js" crossorigin="anonymous"></script>
 
   <title>Christie Chinaka-Portfolio</title>
 </head>
@@ -30,7 +31,7 @@
     <h1>Christie Chinaka</h1>
     <h3 class="mb-3">Front-end developer based in the United States</h3>
     <div>
-      <a href="#" class="btn btn-main">Contact me</a>
+      <a href="#" class="btn btn-main" target="_blank">Contact me</a>
     </div>
   </div>
   
@@ -46,7 +47,7 @@
             <p class="card-text text-muted">Look up the weather around the world using my weather app developed using the SheCodes Weather API.</p>
           </div>
           <div class="card-footer d-flex justify-content-center">
-            <a href="https://golden-liger-09cb10.netlify.app/" class="btn btn-main">Launch Weather App</a>
+            <a href="https://golden-liger-09cb10.netlify.app/" class="btn btn-main" target="_blank">Launch Weather App</a>
           </div>
         </div>
       </div>
@@ -56,10 +57,10 @@
           <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/172/894/original/Dictionary_App.png?1756326649" class="card-img-top" />
           <div class="card-body text-center card-background">
             <h5 class="card-title">Dictionary App</h5>
-            <p class="card-text text-muted">Look up word definitions with picture examples using my dictionary app developed using the SheCodes Dictionary API.</p> 
+            <p class="card-text text-muted">Look up word definitions with picture examples using my dictionary app developed using the SheCodes Dictionary API.</p>
           </div>
           <div class="card-footer d-flex justify-content-center">
-            <a href="https://animated-custard-47288e.netlify.app/" class="btn btn-main">Launch Dictionary App</a>
+            <a href="https://animated-custard-47288e.netlify.app/" class="btn btn-main" target="_blank">Launch Dictionary App</a>
           </div>
         </div>
       </div>
@@ -72,7 +73,7 @@
             <p class="card-text text-muted">View baking projects and contact information on the baking website.</p>
           </div>
           <div class="card-footer d-flex justify-content-center">
-            <a href="https://astonishing-sable-13b731.netlify.app/" class="btn btn-main">Launch Baking Website</a>
+            <a href="https://astonishing-sable-13b731.netlify.app/" class="btn btn-main" target="_blank">Launch Baking Website</a>
           </div>
         </div>
       </div>
@@ -85,7 +86,7 @@
             <p class="card-text text-muted">View top travel sites, Instagram posts, and transportation options throughout major cities in Japan.</p>
           </div>
           <div class="card-footer d-flex justify-content-center">
-            <a href="https://peppy-biscotti-5e1d5c.netlify.app/" class="btn btn-main">Launch Japan Website</a>
+            <a href="https://peppy-biscotti-5e1d5c.netlify.app/" class="btn btn-main" target="_blank">Launch Japan Website</a>
           </div>
         </div>
       </div>
@@ -98,7 +99,7 @@
             <p class="card-text text-muted">Select a city to view the current time, as well as see the time in your location.</p>
           </div>
           <div class="card-footer d-flex justify-content-center">
-            <a href="https://frabjous-monstera-cce538.netlify.app/" class="btn btn-main">Launch World Clock</a>
+            <a href="https://frabjous-monstera-cce538.netlify.app/" class="btn btn-main" target="_blank">Launch World Clock</a>
           </div>
         </div>
       </div>
@@ -111,7 +112,7 @@
             <p class="card-text text-muted">Type a topic into the text box and use the SheCodes AI to create a poem.</p>
           </div>
           <div class="card-footer d-flex justify-content-center">
-            <a href="https://tubular-unicorn-1d195e.netlify.app/" class="btn btn-main">Launch Poem App</a>
+            <a href="https://tubular-unicorn-1d195e.netlify.app/" class="btn btn-main" target="_blank">Launch Poem App</a>
           </div>
         </div>
       </div>
@@ -124,11 +125,39 @@
             <p class="card-text text-muted">View the weather around the world using the SheCodes API.</p>
           </div>
           <div class="card-footer d-flex justify-content-center">
-            <a href="https://venerable-faun-ecd2fa.netlify.app/" class="btn btn-main">Launch Weather App</a>
+            <a href="https://venerable-faun-ecd2fa.netlify.app/" class="btn btn-main" target="_blank">Launch Weather App</a>
           </div>
         </div>
       </div>
     </div>
+    <footer>
+      <div class="contact-box d-flex justify-content-between">
+        <div>
+          <h2>Work Inquiries</h2>
+          <p>Let's work together</p>
+        </div>
+        <div>
+          <a href="" class="btn btn-main">
+            Contact Me
+          </a>
+        </div>
+      </div>
+
+      <div class="d-flex justify-content-center mb-5">
+        <a href="mailto:chinaka@gmail.com" class="email-link">chinaka@gmail.com</a>
+      </div>
+      <div class="contact-links d-flex justify-content-center">
+        <a href="" target="_blank">
+          <i class="fa-regular fa-envelope"></i>
+        </a>
+        <a href="" target="_blank">
+          <i class="fa-brands fa-github"></i>
+        </a>
+                <a href="" target="_blank">
+          <i class="fa-brands fa-linkedin"></i>
+        </a>
+      </div>
+    </footer>
   </div>
 
 </body>
