added responsive functionality

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <body>
   <div class="container-fluid">
     <nav class="d-flex justify-content-between">
-      <h2>Christie Chinaka</h2>
-      <ul class="header-list">
+      <h2 class="header-content">Christie Chinaka</h2>
+      <ul class="header-content">
         <li class="active"><a href="/">Home</a></li>
         <li><a href="/about.html">About</a></li>
         <li><a href="/work.html">Work</a></li>
@@ -131,23 +131,24 @@
       </div>
     </div>
     <footer>
-      <div class="contact-box d-flex justify-content-between">
-        <div>
-          <h2>Work Inquiries</h2>
-          <p>Let's work together</p>
+      <div class="contact-box d-flex justify-content-between d-none d-md-flex">
+        <div class="contact-content">
+          <div>
+            <h2>Work Inquiries</h2>
+            <br />
+            <p>Let's work together</p>
+          </div>
         </div>
-        <div>
+        <div class="contact-content">
           <a href="" class="btn btn-main">
             Contact Me
           </a>
         </div>
       </div>
 
-      <div class="d-flex justify-content-center mb-5">
-        <a href="mailto:chinaka@gmail.com" class="email-link">chinaka@gmail.com</a>
-      </div>
+
       <div class="contact-links d-flex justify-content-center">
-        <a href="" target="_blank">
+        <a href="mailto:chinaka@gmail.com" target="_blank">
           <i class="fa-regular fa-envelope"></i>
         </a>
         <a href="" target="_blank">
