updated navigation, styling, made SEO friendly

--- a/contact.html
+++ b/contact.html
@@ -9,26 +9,78 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
   <link rel="stylesheet" href="styles/portfolio.css" />
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/72594b2d43.js" crossorigin="anonymous"></script>
 
-  <title>Christie Chinaka-Portfolio</title>
+  <title>Contact Christie Chinaka-Portfolio</title>
 </head>
 <body>
+  <div class="container-fluid">
+    <nav class="d-flex justify-content-between">
+      <h2 class="header-content"><a href="/" title="Homepage">Christie Chinaka</a></h2>
+      <ul class="header-content">
+        <li><a href="/" title="Homepage">Home</a></li>
+        <li><a href="/about.html" title="About Christie">About</a></li>
+        <li><a href="/work.html" title="Christie's work">Work</a></li>
+        <li class="active"><a href="/contact.html" title="Contact Christie">Contact</a></li>
+      </ul>
+    </nav>
+  </div>
+
   <div class="content-section container">
     <div class="content">
       <h1 class="mb-5 text-center">Let's get in touch:</h1>
       <h2>Email</h2>
       <h4 class="mb-4">
-        <a href="mailto:chinaka@gmail.com">chinaka@gmail.com</a>
+        <a href="mailto:chinaka@gmail.com" title="Email Christie">chinaka@gmail.com</a>
       </h4>
       <h2>LinkedIn</h2>
       <h4 class="mb-4">
-        <a href="mailto:chinaka@gmail.com">chinaka@gmail.com</a>
+        <a href="mailto:chinaka@gmail.com" title="Christie's LinkedIn profile">chinaka@gmail.com</a>
       </h4>
       <h2>SheCodes Profile</h2>
       <h4>
-        <a href="https://www.shecodes.io/graduates/124028-christie-chinaka">chinaka@gmail.com</a>
+        <a href="https://www.shecodes.io/graduates/124028-christie-chinaka" title="Christie's SheCodes profile">chinaka@gmail.com</a>
       </h4>
     </div>
   </div>
+
+  <footer>
+    <div class="contact-box d-flex-fill justify-content-between d-none d-md-flex">
+      <div class="contact-content">
+        <div>
+          <h2>Work Inquiries</h2>
+          <br />
+          <p>Let's work together</p>
+        </div>
+      </div>
+      <div class="contact-content">
+        <a href="/contact.html" class="btn btn-main" title="Contact Christie">
+          Contact Me
+        </a>
+      </div>
+    </div>
+
+    <div class="contact-links d-flex justify-content-center">
+      <a href="mailto:chinaka@gmail.com" target="_blank" title="Email Christie">
+        <i class="fa-regular fa-envelope"></i>
+      </a>
+      <a href="https://github.com/cechinaka" target="_blank" title="Christie's GitHub profile">
+        <i class="fa-brands fa-github"></i>
+      </a>
+              <a href="" target="_blank" title="Christie's LinkedIn profile">
+        <i class="fa-brands fa-linkedin"></i>
+      </a>
+    </div>
+    
+    <div class="project-footer m-4 text-center">
+      <h4>This project was coded by 
+        <a href="https://github.com/cechinaka" title="Christie's GitHub profile">Christie Chinaka</a> 
+        and is open-sources on 
+        <a href="https://github.com/cechinaka/chinaka-portfolio" title="Christie's GitHub porfolio project">GitHub</a> 
+        and hosted on <a href="https://christiechinaka.netlify.app/" title="Christie's portfolio project on Netlify">Netlify</a>.
+      </h4>
+    </div>
+  </footer>
+
 </body>
 </html>
