--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Christie is a front-end developer based in the United States.">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Handlee&family=Poppins:ital,wght@0,400;0,500;0,700;1,400&display=swap" rel="stylesheet">
@@ -16,12 +17,12 @@
 <body>
   <div class="container-fluid">
     <nav class="d-flex justify-content-between">
-      <h2 class="header-content">Christie Chinaka</h2>
+      <h2 class="header-content"><a href="/" title="Homepage">Christie Chinaka</a></h2>
       <ul class="header-content">
-        <li class="active"><a href="/">Home</a></li>
-        <li><a href="/about.html">About</a></li>
-        <li><a href="/work.html">Work</a></li>
-        <li><a href="/contact.html">Contact</a></li>
+        <li class="active"><a href="/" title="Homepage">Home</a></li>
+        <li><a href="/about.html" title="About Christie">About</a></li>
+        <li><a href="/work.html" title="Christie's work">Work</a></li>
+        <li><a href="/contact.html" title="Contact Christie">Contact</a></li>
       </ul>
     </nav>
   </div>
@@ -31,7 +32,7 @@
     <h1>Christie Chinaka</h1>
     <h3 class="mb-3">Front-end developer based in the United States</h3>
     <div>
-      <a href="#" class="btn btn-main" target="_blank">Contact me</a>
+      <a href="/contact.html" class="btn btn-main" target="_blank">Contact me</a>
     </div>
   </div>
   
@@ -41,7 +42,7 @@
     <div class="row row-cols-md-3 g-4 app-grid">
       <div class="col d-flex justify-content-center">
         <div class="card" style="width: 35rem;">
-          <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/172/895/original/Weather_App_React.png?1756326655" class="card-img-top" />
+          <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/172/895/original/Weather_App_React.png?1756326655" class="card-img-top" alt="Weather app preview" />
           <div class="card-body text-center card-background">
             <h5 class="card-title">Weather App</h5>
             <p class="card-text text-muted">Look up the weather around the world using my weather app developed using the SheCodes Weather API.</p>
@@ -54,7 +55,7 @@
       
       <div class="col d-flex justify-content-center">
         <div class="card" style="width: 35rem;">
-          <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/172/894/original/Dictionary_App.png?1756326649" class="card-img-top" />
+          <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/172/894/original/Dictionary_App.png?1756326649" class="card-img-top" alt="Dictionary app preview" />
           <div class="card-body text-center card-background">
             <h5 class="card-title">Dictionary App</h5>
             <p class="card-text text-muted">Look up word definitions with picture examples using my dictionary app developed using the SheCodes Dictionary API.</p>
@@ -67,7 +68,7 @@
 
       <div class="col d-flex justify-content-center">
         <div class="card" style="width: 35rem">
-          <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/172/893/original/Baking.png?1756326641" class="card-img-top" />
+          <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/172/893/original/Baking.png?1756326641" class="card-img-top" alt="Baking website preview" />
           <div class="card-body text-center card-background">
             <h5 class="card-title">Baking Website</h5>
             <p class="card-text text-muted">View baking projects and contact information on the baking website.</p>
@@ -80,7 +81,7 @@
 
       <div class="col d-flex justify-content-center additional-row-app">
         <div class="card" style="width: 35rem">
-          <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/172/896/original/Japan_Travel.png?1756326664" class="card-img-top" />
+          <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/172/896/original/Japan_Travel.png?1756326664" class="card-img-top" alt="Travel Japan website preview" />
           <div class="card-body text-center card-background">
             <h5 class="card-title">Travel Japan Website</h5>
             <p class="card-text text-muted">View top travel sites, Instagram posts, and transportation options throughout major cities in Japan.</p>
@@ -93,7 +94,7 @@
 
       <div class="col d-flex justify-content-center additional-row-app">
         <div class="card" style="width: 35rem">
-          <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/172/898/original/World_Clock.png?1756326683" class="card-img-top" />
+          <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/172/898/original/World_Clock.png?1756326683" class="card-img-top" alt="World Clock app preview" />
           <div class="card-body text-center card-background">
             <h5 class="card-title">World Clock Website</h5>
             <p class="card-text text-muted">Select a city to view the current time, as well as see the time in your location.</p>
@@ -106,7 +107,7 @@
 
       <div class="col d-flex justify-content-center additional-row-app">
         <div class="card" style="width: 35rem">
-          <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/172/892/original/AI_Poem_Generator.png?1756326632" class="card-img-top" />
+          <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/172/892/original/AI_Poem_Generator.png?1756326632" class="card-img-top" alt="AI poem generator preview" />
           <div class="card-body text-center card-background">
             <h5 class="card-title">AI Poem App</h5>
             <p class="card-text text-muted">Type a topic into the text box and use the SheCodes AI to create a poem.</p>
@@ -119,7 +120,7 @@
 
       <div class="col d-flex justify-content-center mx-auto additional-row-app" style:="width: 200px;">
         <div class="card" style="width: 35rem">
-          <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/172/897/original/Weather_App_Vanilla.png?1756326675" class="card-img-top" />
+          <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/172/897/original/Weather_App_Vanilla.png?1756326675" class="card-img-top" alt="Weather app preview" />
           <div class="card-body text-center card-background">
             <h5 class="card-title">Weather App</h5>
             <p class="card-text text-muted">View the weather around the world using the SheCodes API.</p>
@@ -130,8 +131,9 @@
         </div>
       </div>
     </div>
+
     <footer>
-      <div class="contact-box d-flex justify-content-between d-none d-md-flex">
+      <div class="contact-box d-flex-fill justify-content-between d-none d-md-flex">
         <div class="contact-content">
           <div>
             <h2>Work Inquiries</h2>
@@ -140,7 +142,7 @@
           </div>
         </div>
         <div class="contact-content">
-          <a href="" class="btn btn-main">
+          <a href="/contact.html" class="btn btn-main" title="Contact Christie">
             Contact Me
           </a>
         </div>
@@ -148,16 +150,24 @@
 
 
       <div class="contact-links d-flex justify-content-center">
-        <a href="mailto:chinaka@gmail.com" target="_blank">
+        <a href="mailto:chinaka@gmail.com" target="_blank" title="Email Christie">
           <i class="fa-regular fa-envelope"></i>
         </a>
-        <a href="" target="_blank">
+        <a href="https://github.com/cechinaka" target="_blank" title="Christie's GitHub profile">
           <i class="fa-brands fa-github"></i>
         </a>
-                <a href="" target="_blank">
+                <a href="" target="_blank" title="Christie's LinkedIn profile">
           <i class="fa-brands fa-linkedin"></i>
         </a>
       </div>
+      <div class="project-footer m-4 text-center">
+      <h4>This project was coded by 
+        <a href="https://github.com/cechinaka" title="Christie's GitHub profile">Christie Chinaka</a> 
+        and is open-sources on 
+        <a href="https://github.com/cechinaka/chinaka-portfolio" title="Christie's GitHub porfolio project">GitHub</a> 
+        and hosted on <a href="https://christiechinaka.netlify.app/" title="Christie's portfolio project on Netlify">Netlify</a>.
+      </h4>
+    </div>
     </footer>
   </div>
 
