added photos and descriptions to work page, styled css, and added navigation

--- a/work.html
+++ b/work.html
@@ -30,23 +30,67 @@
     <div>
       <h1 class="mb-5 text-center">See some of my latest projects:</h1>
     </div>
+
     <div class="row">
-      <div class="col-md-4 text-center">
-        <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/172/895/original/Weather_App_React.png?1756326655" class="latest-projects img-fluid" />
-        <h4 class="mt-4">Weather App</h4>
-        <p class="text-muted">Coded with HTML, React, and SheCodes API.</p>
+      <div class="col-md-4 mb-5 text-center">
+        <a href="https://golden-liger-09cb10.netlify.app/" title="Launch Weather App" class="work-text" target="_blank">
+          <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/172/895/original/Weather_App_React.png?1756326655" class="latest-projects img-fluid" />
+          <h4 class="mt-4">Weather App</h4>
+          <p class="text-muted">Coded with HTML, CSS, JS, React, and SheCodes API, as well as a search engine and forecast.</p>
+        </a>
       </div>
 
-      <div class="col-md-4 text-center">
-        <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/172/894/original/Dictionary_App.png?1756326649" class="latest-projects img-fluid" />
-        <h4 class="mt-4">Dictionary App</h4>
-        <p class="text-muted">Coded with HTML, React, and SheCodes API.</p>
+      <div class="col-md-4 mb-5 text-center">
+        <a href="https://animated-custard-47288e.netlify.app/" title="Launch Dictionary App" class="work-text" target="_blank">
+          <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/172/894/original/Dictionary_App.png?1756326649" class="latest-projects img-fluid" />
+          <h4 class="mt-4">Dictionary App</h4>
+          <p class="text-muted">Coded with HTML, CSS, JS, React, and SheCodes API, as well as a search engine.</p>
+        </a>
       </div>
 
+      <div class="col-md-4 mb-5 text-center">
+        <a href="https://astonishing-sable-13b731.netlify.app/" title="Launch Baking Website" class="work-text" target="_blank">
+          <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/172/893/original/Baking.png?1756326641" class="latest-projects img-fluid" />
+          <h4 class="mt-4">Baking Website</h4>
+          <p class="text-muted">A multi-page website coded with HTML, CSS, JS, and Bootstrap, including responsive grids, images, navigation, and SEO.</p>
+        </a>
+        
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-4 mb-5 text-center">
+        <a href="https://peppy-biscotti-5e1d5c.netlify.app/" title="Launch Travel Japan Website" class="work-text" target="_blank">
+          <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/172/896/original/Japan_Travel.png?1756326664" class="latest-projects img-fluid" />
+          <h4 class="mt-4">Travel Japan Website</h4>
+          <p class="text-muted">Coded with HTML, CSS, and JS, including responsive cards and embeds.</p>
+        </a>
+      </div>
+
+      <div class="col-md-4 mb-5 text-center">
+        <a href="https://frabjous-monstera-cce538.netlify.app/" title="Launch World Clock Website" class="work-text" target="_blank">
+          <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/172/898/original/World_Clock.png?1756326683" class="latest-projects img-fluid" />
+          <h4 class="mt-4">World Clock Website</h4>
+          <p class="text-muted">Coded with HTML, CSS, and JS, including select elements and an option to view the time in the user's current location.</p>
+        </a>
+      </div>
+
+      <div class="col-md-4 mb-5 text-center">
+        <a href="https://tubular-unicorn-1d195e.netlify.app/" title="Launch AI Poem App" class="work-text" target="_blank">
+          <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/172/892/original/AI_Poem_Generator.png?1756326632" class="latest-projects img-fluid" />
+          <h4 class="mt-4">AI Poem App</h4>
+          <p class="text-muted">Coded with HTML, CSS, JS, and SheCodes API.</p>
+        </a>
+      </div>
+    </div>
+
+    <div class="row d-flex justify-content-center mx-auto">
       <div class="col-md-4 text-center">
-        <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/172/893/original/Baking.png?1756326641" class="latest-projects img-fluid" />
-        <h4 class="mt-4">Baking Website</h4>
-        <p class="text-muted">Coded with HTML, React, and SheCodes API.</p>
+        <a href="https://venerable-faun-ecd2fa.netlify.app/" title="Launch Weather App" class="work-text" target="_blank">
+          <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/172/897/original/Weather_App_Vanilla.png?1756326675" class="latest-projects img-fluid" />
+          <h4 class="mt-4">Weather App</h4>
+          <p class="text-muted">Coded with HTML, CSS, JS, and SheCodes API, including a search engine, icon integration, and forecast functionality.</p>
+        </a>
       </div>
     </div>
 
