--- a/index.html
+++ b/index.html
@@ -7,32 +7,39 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Handlee&family=Poppins:ital,wght@0,400;0,500;0,700;1,400&display=swap" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
   <link rel="stylesheet" href="styles/portfolio.css" />
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
   <script src="https://kit.fontawesome.com/72594b2d43.js" crossorigin="anonymous"></script>
 
   <title>Christie Chinaka-Portfolio</title>
 </head>
-<body>
-  <div class="container-fluid">
-    <nav class="d-flex justify-content-between">
-      <h2 class="header-content"><a href="/" title="Homepage">Christie Chinaka</a></h2>
-      <ul class="header-content">
-        <li class="active"><a href="/" title="Homepage">Home</a></li>
-        <li><a href="/about.html" title="About Christie">About</a></li>
-        <li><a href="/work.html" title="Christie's work">Work</a></li>
-        <li><a href="/contact.html" title="Contact Christie">Contact</a></li>
-      </ul>
-    </nav>
-  </div>
+<body> 
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <h2 class="navbar-brand header-content"><a href="/" class="navbar-brand" title="Homepage">Christie Chinaka</a></h2>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item"><a href="/" title="Homepage" class="nav-link active header-content" aria-current="page">Home</a></li>
+          <li class="nav-item"><a href="/about.html" title="About Christie" class="nav-link header-content">About</a></li>
+          <li class="nav-item"><a href="/work.html" title="Christie's work" class="nav-link header-content">Work</a></li>
+          <li class="nav-item"><a href="/contact.html" title="Contact Christie" class="nav-link header-content">Contact</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  
 
   <div class="hero">
     <p>👋 Hello, I am</p>
     <h1>Christie Chinaka</h1>
     <h3 class="mb-3">Front-end developer based in the United States</h3>
     <div>
-      <a href="/contact.html" class="btn btn-main" target="_blank">Contact me</a>
+      <a href="/contact.html" class="btn btn-main" title="Contact Christie" target="_blank">Contact me</a>
     </div>
   </div>
   
