--- a/work.html
+++ b/work.html
@@ -14,17 +14,23 @@
   <title>Christie Chinaka's Work Portfolio</title>
 </head>
 <body>
-  <div class="container-fluid">
-    <nav class="d-flex justify-content-between">
-      <h2 class="header-content"><a href="/" title="Homepage">Christie Chinaka</a></h2>
-      <ul class="header-content">
-        <li><a href="/" title="Homepage">Home</a></li>
-        <li><a href="/about.html" title="About Christie">About</a></li>
-        <li class="active"><a href="/work.html" title="Christie's work">Work</a></li>
-        <li><a href="/contact.html" title="Contact Christie">Contact</a></li>
-      </ul>
-    </nav>
-  </div>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <h2 class="navbar-brand header-content"><a href="/" class="navbar-brand" title="Homepage">Christie Chinaka</a></h2>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item"><a href="/" title="Homepage" class="nav-link header-content" aria-current="page">Home</a></li>
+          <li class="nav-item"><a href="/about.html" title="About Christie" class="nav-link header-content">About</a></li>
+          <li class="nav-item"><a href="/work.html" title="Christie's work" class="nav-link active header-content">Work</a></li>
+          <li class="nav-item"><a href="/contact.html" title="Contact Christie" class="nav-link header-content">Contact</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
   <div class="content-section container">
     <div>
