updated contact links

--- a/contact.html
+++ b/contact.html
@@ -41,14 +41,14 @@
 
         <h3 class="mb-4">Christie's...</h3>
         <h2 class="mb-4">
-          <a href="mailto:chinaka@gmail.com" target="_blank" title="Email Christie" class="contact-list">
+          <a href="mailto:chinaka08@gmail.com" target="_blank" title="Email Christie" class="contact-list">
             <i class="fa-regular fa-envelope email-icon"> </i>
             Email
           </a>
         </h2> 
 
         <h2 class="mb-4">
-          <a href="" target="_blank" title="Christie's LinkedIn profile" class="contact-list">
+          <a href="https://www.linkedin.com/in/christiechinaka" target="_blank" title="Christie's LinkedIn profile" class="contact-list">
             <i class="fa-brands fa-linkedin linkedIn-icon"></i>
             LinkedIn Profile
           </a>
