--- a/index.html
+++ b/index.html
@@ -157,13 +157,13 @@
 
 
       <div class="contact-links d-flex justify-content-center">
-        <a href="mailto:chinaka@gmail.com" target="_blank" title="Email Christie">
+        <a href="mailto:chinaka08@gmail.com" target="_blank" title="Email Christie">
           <i class="fa-regular fa-envelope"></i>
         </a>
         <a href="https://github.com/cechinaka" target="_blank" title="Christie's GitHub profile">
           <i class="fa-brands fa-github"></i>
         </a>
-        <a href="" target="_blank" title="Christie's LinkedIn profile">
+        <a href="https://www.linkedin.com/in/christiechinaka" target="_blank" title="Christie's LinkedIn profile">
           <i class="fa-brands fa-linkedin"></i>
         </a>
       </div>
