--- a/contact.html
+++ b/contact.html
@@ -41,21 +41,21 @@
 
         <h3 class="mb-4">Christie's...</h3>
         <h2 class="mb-4">
-          <a href="mailto:chinaka08@gmail.com" target="_blank" title="Email Christie" class="contact-list">
+          <a href="mailto:chinaka08@gmail.com" target="_blank" target="_blank" title="Email Christie" class="contact-list">
             <i class="fa-regular fa-envelope email-icon"> </i>
             Email
           </a>
         </h2> 
 
         <h2 class="mb-4">
-          <a href="https://www.linkedin.com/in/christiechinaka" target="_blank" title="Christie's LinkedIn profile" class="contact-list">
+          <a href="https://www.linkedin.com/in/christiechinaka" target="_blank" target="_blank" title="Christie's LinkedIn profile" class="contact-list">
             <i class="fa-brands fa-linkedin linkedIn-icon"></i>
             LinkedIn Profile
           </a>
         </h2>
 
         <h2 class="mb-4">
-          <a href="https://github.com/cechinaka" title="Christie's GitHub profile" class="contact-list">
+          <a href="https://github.com/cechinaka" target="_blank" title="Christie's GitHub profile" class="contact-list">
           <i class="fa-brands fa-github gitHub-icon"></i>
             GitHub Profile
           </a>
@@ -75,10 +75,10 @@
   <footer>    
     <div class="project-footer m-4 text-center">
       <h4>This project was coded by 
-        <a href="https://github.com/cechinaka" title="Christie's GitHub profile">Christie Chinaka</a> 
+        <a href="https://github.com/cechinaka" target="_blank" title="Christie's GitHub profile">Christie Chinaka</a> 
         and is open-sources on 
-        <a href="https://github.com/cechinaka/chinaka-portfolio" title="Christie's GitHub porfolio project">GitHub</a> 
-        and hosted on <a href="https://christiechinaka.netlify.app/" title="Christie's portfolio project on Netlify">Netlify</a>.
+        <a href="https://github.com/cechinaka/chinaka-portfolio" target="_blank" title="Christie's GitHub porfolio project">GitHub</a> 
+        and hosted on <a href="https://christiechinaka.netlify.app/" target="_blank" title="Christie's portfolio project on Netlify">Netlify</a>.
       </h4>
     </div>
   </footer>
