--- a/work.html
+++ b/work.html
@@ -134,10 +134,10 @@
 
     <div class="project-footer m-4 text-center">
       <h4>This project was coded by 
-        <a href="https://github.com/cechinaka" title="Christie's GitHub profile">Christie Chinaka</a> 
+        <a href="https://github.com/cechinaka" target="_blank" title="Christie's GitHub profile">Christie Chinaka</a> 
         and is open-sources on 
-        <a href="https://github.com/cechinaka/chinaka-portfolio" title="Christie's GitHub porfolio project">GitHub</a> 
-        and hosted on <a href="https://christiechinaka.netlify.app/" title="Christie's portfolio project on Netlify">Netlify</a>.
+        <a href="https://github.com/cechinaka/chinaka-portfolio" target="_blank" title="Christie's GitHub porfolio project">GitHub</a> 
+        and hosted on <a href="https://christiechinaka.netlify.app/" target="_blank" title="Christie's portfolio project on Netlify">Netlify</a>.
       </h4>
     </div>
   </footer>
